tests/ui/lint/snapshots/unused_result_in_tail_position.snap
---
source: tests/ui/lint/mod.rs
---
  [error] Mismatch between return type and return value
   ╭─[test.lis:7:3]
 5 │ 
 6 │ fn do_work() {
   ·              ┬
   ·              ╰── has `()` as implicit return type
 7 │   get_result()
   ·   ──────┬─────
   ·         ╰── returns `Result<int, string>`
 8 │ }
   ╰────
  help: If the `()` return type is intended, discard the return value with `let _ = ...`. If the `Result<int, string>` return value is intended, add `-> Result<int, string>` to the function signature · code: [lint.mismatched_return_value]
