tests/ui/lint/snapshots/unused_result_in_unit_block_initializer.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ `Result` is silently discarded
    ╭─[test.lis:9:7]
  8 │     if true {
  9 │       commit()
    ·       ────┬───
    ·           ╰── failure will go unnoticed
 10 │     }
    ╰────
  help: Handle this `Result` with `?` or `match`, or explicitly discard it with `let _ = ...` · code: [lint.unused_result]
