tests/ui/lint/snapshots/unused_result_under_defer_block_tail.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ `Result` is silently discarded
   ╭─[test.lis:8:5]
 7 │   defer {
 8 │     commit()
   ·     ────┬───
   ·         ╰── failure will go unnoticed
 9 │   }
   ╰────
  help: Handle this `Result` with `?` or `match`, or explicitly discard it with `let _ = ...` · code: [lint.unused_result]
