tests/ui/lint/snapshots/unused_result_under_task.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ `Result` is silently discarded
   ╭─[test.lis:7:8]
 6 │ fn main() {
 7 │   task commit()
   ·        ────┬───
   ·            ╰── failure will go unnoticed
 8 │   ()
   ╰────
  help: Handle this `Result` with `?` or `match`, or explicitly discard it with `let _ = ...` · code: [lint.unused_result]
