tests/ui/lint/snapshots/unused_struct_field.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unused field
   ╭─[test.lis:4:3]
 3 │   used_field: int,
 4 │   unused_field: int,
   ·   ──────┬─────
   ·         ╰── never read
 5 │ }
   ╰────
  help: Use or remove this field · code: [lint.unused_struct_field]
