tests/ui/lint/snapshots/unused_type_alias_warning.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unused type
   ╭─[test.lis:2:6]
 1 │ 
 2 │ type Unused = int
   ·      ───┬──
   ·         ╰── never used
 3 │ 
   ╰────
  help: Use or remove this type · code: [lint.unused_type]
