tests/ui/lint/snapshots/unused_type_parameter.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unused type parameter
   ╭─[test.lis:2:16]
 1 │ 
 2 │ pub fn process<T>(x: int) -> int {
   ·                ┬
   ·                ╰── never used
 3 │   x
   ╰────
  help: Remove the unused type parameter or use it in the signature · code: [lint.unused_type_param]
