tests/ui/lint/snapshots/unused_value.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unused expression value
   ╭─[test.lis:3:3]
 2 │ fn main() {
 3 │   1 + 2;
   ·   ──┬──
   ·     ╰── this value is discarded
 4 │   ()
   ╰────
  help: Use the value, or ignore with `let _ = ...` · code: [lint.unused_value]
