tests/ui/lint/snapshots/unused_value_under_defer.snap
---
source: tests/ui/lint/mod.rs
---
  ▲ Unused expression value
   ╭─[test.lis:7:9]
 6 │ fn main() {
 7 │   defer count()
   ·         ───┬───
   ·            ╰── this value is discarded
 8 │   ()
   ╰────
  help: Use the value, or ignore with `let _ = ...` · code: [lint.unused_value]
